--- a/StudentsWebService/src/main/resources/application.yml
+++ b/StudentsWebService/src/main/resources/application.yml
@@ -67,7 +67,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics
+        include: health, info, metrics, customStudentsInfo
    
    
 # ==============================================================
