--- a/StudentsWebService/pom.xml
+++ b/StudentsWebService/pom.xml
@@ -88,6 +88,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		
+		<!-- H2 FOR TESTING -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 
     </dependencies>
 
